eliminate guava, fix caconfig deps